2001-01-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* bggame.cc: cleaned up a bit, correctly aligned some shapes
	* gamewin.cc: corrected some text rendering in conversations,
	experimenting with plasma effect

2001-01-02  Ryan Nunn <triforce@merlin.net.au>
	* Makefile.cygwin: Should fixed crash on exit problem expirenced by Dominik on JackChaos
                           Added U7PATH to specify where Ultima 7 is installed (for make install)
	* Makefile.win32: Also Added U7PATH to this as well

2001-01-01  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* palette.cc: fixed fades when fades are disabled, added set_color()
	* bggame.cc: still working on intro
	* shapes/font.cc: fixed get_text_height(), which broke text rendering
	* gumps/Text_gump.cc: compensate for new get_text_height()

2000-12-31  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, various Makefile.am: added --disable-tools and
	--disable-data configure switches
	* tools/.cvsignore: removed 'txt2cc'
	* palette.cc/h: added Palette::show() to dump palette onscreen
	* gamewin.cc/h: added Game_window::plasma() function (needs work)
	* bggame.cc: fixed up Guardian speech (show right shapes, show plasma)
	* shapes/font.cc: implemented center_text()

2000-12-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Started writing usecode parser.

2000-12-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Bugs fixed:  Can break glass counters.  Don't ready torches.
	Show sundials correctly.

2000-12-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* various: renamed hack-mover to map-editor

2000-12-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Usecode:  Intrinsic 0x92 discovered.  Also increased range of
	find_nearby_avatar(), so beware of problems.

2000-12-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Edit colors in palette editor.

2000-12-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* savepcx.cc: fixed 8 bit output (RGB <-> BGR)
	* mapedit/.cvsignore: added 'paltest'
